--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "pug": "^2.0.3",
     "vue": "^2.5.16",
     "vuetify": "^1.0.19"
   },
