--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/cli-plugin-eslint": "^3.0.0-rc.5",
     "@vue/cli-service": "^3.0.0-rc.5",
     "vue-cli-plugin-vuetify": "^0.1.6",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
