--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "yarn": "1.7.0",
+    "node": "10.7.0"
+  },
   "dependencies": {
+    "express": "^4.16.3",
     "mdi": "^2.2.43",
     "pug": "^2.0.3",
     "vue": "^2.5.16",
